fix(a11y) button color contrast [TDX-1651]

--- a/src/styles.css
+++ b/src/styles.css
@@ -558,6 +558,7 @@
   right: 20px;
   word-break: normal;
   padding: 4px 0px;
+  background-color: var(--black-400);
 }
 
 .swagger-ui .opblock .opblock-section-header h1 {
@@ -1022,6 +1023,15 @@
   -ms-grid-column: 1;
   padding: 16px 0 20px 13em;
   height: 71px;
+}
+
+.swagger-ui .try-out .btn.cancel {
+  color: var(--red-600);
+  border-color: var(--red-600);
+}
+
+.swagger-ui .btn.execute {
+  background-color: var(--blue-500);
 }
 
 .swagger-ui .opblock-body .execute-wrapper {
